<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/personal_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/text_personal"
        android:layout_width="fill_parent"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/selector_container"
            android:layout_width="fill_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/time_selector_container"
                android:layout_width="match_parent"
                android:layout_height="95dp"
                android:gravity="center">


                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/bgBar"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:text="@string/button_time_daily"
                    android:textColor="@color/colorPrimary"
                    />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/bgBar"
                    android:text="@string/button_time_weekly"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/bgBar"
                    android:text="@string/button_time_monthly"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/bgBar"
                    android:text="@string/button_time_yearly"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/filter_selector_container"
                android:layout_width="match_parent"
                android:layout_height="95dp"
                android:gravity="center">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/bgBar"
                    android:text="@string/button_filter_song"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/bgBar"
                    android:text="@string/button_filter_artist"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/bgBar"
                    android:text="@string/button_filter_genre"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/bgBar"
                    android:text="@string/button_filter_album"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"/>

            </LinearLayout>
        </LinearLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <!-- Use this list view to present the entered records from the database -->
                <!-- A list view of list views should be needed because each record has a list of data associated with it -->
                <ListView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </ListView>
            </ListView>
        </ScrollView>


</LinearLayout>